Fix responsive + Fix numebr on mobile

--- a/WebContent/static/css/responsive.css
+++ b/WebContent/static/css/responsive.css
@@ -99,10 +99,7 @@
 	.col-value > select {
 		width: 98%;
 	}
-	textarea, select, input[type="text"], input[type="password"], input[type="datetime"], 
-	input[type="datetime-local"], input[type="date"], input[type="month"], input[type="week"], 
-	input[type="time"], input[type="number"], input[type="url"], input[type="search"], 
-	input[type="email"], input[type="tel"], input[type="color"] {
+	.col-value > textarea, .col-value > input {
 		width: 95%;
 	}
 
